--- a/DiageoMDMWeb/src/main/webapp/admin/usuario/consultarUsuario.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/usuario/consultarUsuario.xhtml
@@ -24,7 +24,7 @@
                     <p:fieldset legend="#{msg.m_usuario}" style="width: 98%" rendered="#{consultarUsuarioBean.verDetalle}">
                         <p:dataTable id="dtUsuarios" value="#{consultarUsuarioBean.listaUsuariosSistema}" var="usu"
                                      widgetVar="wvUsu" style="width: 98%; word-wrap: break-word;font-size: 11px !important" rendered="#{consultarUsuarioBean.verDetalle}"
-                                     paginatorAlwaysVisible="false" rows="12"  paginator="true" 
+                                     paginatorAlwaysVisible="true" rows="12"  paginator="true" 
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                      reflow="true">                            
                             <p:column headerText="#{msg.usu_nombres}" filterBy="#{usu.nameUser}" filterMatchMode="startsWith" sortBy="#{usu.nameUser}">
