--- a/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
@@ -3,10 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:body>
 
@@ -40,196 +38,9 @@
                             width: 22% !important;
                         }
 
-                    </style>     
-                    <h:commandLink rendered="#{outletConsultarBean.verDetalle and (loginBean.usuario.profileId.nameProfile eq 'ADMINISTRATOR'  or loginBean.usuario.profileId.nameProfile eq 'DATA STEWARD')}">
-                        <p:graphicImage name="/images/iconos/xls.png" width="5%"/>
-                        <pe:exporter type="xlsx" target="dtOutletNew"  fileName="Report" pageOnly="false"/>
-                    </h:commandLink>
-
-                    <h:commandLink rendered="#{outletConsultarBean.verDetalle and (loginBean.usuario.profileId.nameProfile eq 'ADMINISTRATOR'  or loginBean.usuario.profileId.nameProfile eq 'DATA STEWARD')}">
-                        <p:graphicImage name="/images/iconos/csv.png" width="5%"/>
-                        <p:dataExporter type="csv" target="dtOutletNew" fileName="Report" pageOnly="false" />
-                    </h:commandLink>
-
-                    <h:commandLink rendered="#{outletConsultarBean.verDetalle and (loginBean.usuario.profileId.nameProfile eq 'TMC' or loginBean.usuario.profileId.nameProfile eq 'COMMERCIAL MANAGER' 
-                                               or loginBean.usuario.profileId.nameProfile eq 'KAM' or loginBean.usuario.profileId.nameProfile eq 'CATDEV')}">
-                        <p:graphicImage name="/images/iconos/xls.png" width="5%"/>
-                        <p:dataExporter type="xls" target="dtOutletNew2" fileName="Report" pageOnly="false" />
-                    </h:commandLink>
-
-                    <h:commandLink rendered="#{outletConsultarBean.verDetalle and (loginBean.usuario.profileId.nameProfile eq 'TMC' or loginBean.usuario.profileId.nameProfile eq 'COMMERCIAL MANAGER' 
-                                               or loginBean.usuario.profileId.nameProfile eq 'KAM' or loginBean.usuario.profileId.nameProfile eq 'CATDEV')}">
-                        <p:graphicImage name="/images/iconos/csv.png" width="5%"/>
-                        <p:dataExporter type="csv" target="dtOutletNew2" fileName="Report" pageOnly="false" />
-                    </h:commandLink>
-                    <br/>
-
-                    <p:dataTable id="dtOutletNew" value="#{outletConsultarBean.outletsLazyDataModel}" var="outdtNew" paginatorAlwaysVisible="false" rows="15"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 style="font-size:  90%;word-wrap: break-word;font-size: 9px !important" 
-                                 rendered="#{outletConsultarBean.renderDataTableLazyDataModel()}" paginator="true"
-                                 widgetVar="dtOutletSearch" lazy="true"
-                                 emptyMessage="#{msg.out_msg_not_record}"> 
-                        <p:column headerText="#{msg.status}" filterMatchMode="exact" filterBy="#{outdtNew.statusMDM}" exportable="false">
-                            <f:facet name="filter">
-                                <p:selectOneMenu onchange="PF('dtOutletSearch').filter()" style="width: 80%">
-                                    <f:selectItem itemLabel="#{msg.seleccion}" itemValue="#{null}" noSelectionOption="true"/>
-                                    <c:if test="#{outletConsultarBean.renderPendingTMCRejectStatus}">
-                                        <f:selectItem itemValue="PENDING_TMC" itemLabel="#{msg.sta_pending_tmc}" />
-                                    </c:if>
-                                    <c:if test="#{outletConsultarBean.renderPendingTMCRejectStatus}">
-                                        <f:selectItem itemValue="REJECT" itemLabel="#{msg.sta_reject}"/>
-                                    </c:if>
-                                    <c:if test="#{outletConsultarBean.renderPendingCMStatus}">
-                                        <f:selectItem itemValue="PENDING_COMMERCIAL_MANAGER" itemLabel="#{msg.sta_pending_commercial_manager}"/>
-                                    </c:if>
-                                    <c:if test="#{outletConsultarBean.renderApprovedStatus}">
-                                        <f:selectItem itemValue="APPROVED" itemLabel="#{msg.sta_approval}"/>
-                                    </c:if>
-                                </p:selectOneMenu>
-                            </f:facet>
-                            <h:outputLabel value="&lt;b&gt;#{msg.sta_reject}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'REJECT'}" style="color: red" escape="false"/>
-                            <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_tmc}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'PENDING_TMC'}" style="color: blue" escape="false"/>
-                            <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_commercial_manager}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'PENDING_COMMERCIAL_MANAGER'}" style="color: sienna" escape="false"/>
-                            <h:outputLabel value="&lt;b&gt;#{msg.sta_approval}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'APPROVED'}" style="color: greenyellow" escape="false"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_approbation_massive}" rendered="#{outletConsultarBean.renderMassiveApproval}">
-                            <p:selectBooleanCheckbox value="#{outdtNew.approbationMassive}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_razon_social}" filterBy="#{outdtNew.businessName}" filterMatchMode="startsWith">
-                            <h:outputLabel value="#{outdtNew.businessName}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_nit}" filterBy="#{outdtNew.nit}" filterMatchMode="startsWith">
-                            <h:outputLabel value="#{outdtNew.nit}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.sub_seg_subsegmento}" filterBy="#{outdtNew.subSegmentId.nameSubsegment}" filterMatchMode="startsWith">
-                            <h:outputLabel value="#{outdtNew.subSegmentId.nameSubsegment}"/>
-                        </p:column>
-
-                        <p:column headerText="#{msg.out_kiernan}" filterBy="#{outdtNew.kiernanId}" filterMatchMode="startsWith">
-                            <h:outputLabel value="#{outdtNew.kiernanId}"/>
-                        </p:column>    
-                        <p:column headerText="#{msg.out_punto_venta}" filterBy="#{outdtNew.kiernanId}" filterMatchMode="startsWith">
-                            <h:outputLabel value="#{outdtNew.numberPdv}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_direccion}">
-                            <h:outputLabel value="#{outdtNew.address}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.chain_city}">
-                            <h:outputLabel value="#{outdtNew.townId.nameTown}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_nit}">
-                            <h:outputLabel value="#{outdtNew.nit}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.can_canal}">
-                            <h:outputLabel value="#{outdtNew.subSegmentId.segmentId.subChannelId.channelId.nameChannel}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.sub_subcanal}">
-                            <h:outputLabel value="#{outdtNew.subSegmentId.segmentId.subChannelId.nameSubChannel}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.seg_segmento}">
-                            <h:outputLabel value="#{outdtNew.subSegmentId.segmentId.nameSegment}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_potencial}">
-                            <h:outputLabel value="#{outdtNew.potentialId.namePotential}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_distribuidor} #{msg.old}">
-                            <h:outputLabel value="#{outletConsultarBean.showDistributorName(outdtNew.db3PartyIdOld)}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_distribuidor}">
-                            <h:outputLabel value="#{outletConsultarBean.showDistributorName(outdtNew.db3PartyIdNew)}"/>
-                        </p:column>
-                        <p:column style="width: 8%;text-align: center" exportable="false">
-                            <p:commandLink value="#{msg.btn_edit}" style="color: blue" process="@all" update="@form"
-                                           actionListener="#{outletConsultarBean.seeDetail(outdtNew)}" disabled="#{outdtNew.disabledButtonEdit}"/>
-                            <br/><br/>
-                            <h:panelGroup rendered="#{outdt.statusOutlet eq '4'}">
-                                <h:outputLabel id="labelRe" value="Detalle Rechazo" style="color: blue"/>
-                                <p:tooltip for="labelRe" value="#{outdtNew.rejectMessage}"/>
-                            </h:panelGroup>
-                        </p:column>
-                    </p:dataTable>
-                    <p:dataTable id="dtOutletNew2" value="#{outletConsultarBean.listOutlets}" var="outdtNew2" paginatorAlwaysVisible="false" rows="15"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 style="font-size:  90%;word-wrap: break-word;" 
-                                 rendered="#{outletConsultarBean.renderDataTable()}" paginator="true"
-                                 widgetVar="dtOutletSearch2" 
-                                 emptyMessage="#{msg.out_msg_not_record}"> 
-                        <p:column headerText="#{msg.status}" filterMatchMode="exact" filterBy="#{outdtNew2.statusMDM}">
-                            <f:facet name="filter">
-                                <p:selectOneMenu onchange="PF('dtOutletSearch2').filter()" style="width: 80%">
-                                    <f:selectItem itemLabel="#{msg.seleccion}" itemValue="#{null}" noSelectionOption="true"/>
-                                    <c:if test="#{outletConsultarBean.renderPendingTMCRejectStatus}">
-                                        <f:selectItem itemValue="PENDING_TMC" itemLabel="#{msg.sta_pending_tmc}" />
-                                    </c:if>
-                                    <c:if test="#{outletConsultarBean.renderPendingTMCRejectStatus}">
-                                        <f:selectItem itemValue="REJECT" itemLabel="#{msg.sta_reject}"/>
-                                    </c:if>
-                                    <c:if test="#{outletConsultarBean.renderPendingCMStatus}">
-                                        <f:selectItem itemValue="PENDING_COMMERCIAL_MANAGER" itemLabel="#{msg.sta_pending_commercial_manager}"/>
-                                    </c:if>
-                                    <c:if test="#{outletConsultarBean.renderApprovedStatus}">
-                                        <f:selectItem itemValue="APPROVED" itemLabel="#{msg.sta_approval}"/>
-                                    </c:if>
-                                </p:selectOneMenu>
-                            </f:facet>
-                            <h:outputLabel value="&lt;b&gt;#{msg.sta_reject}&lt;/b&gt;" rendered="#{outdtNew2.statusMDM eq 'REJECT'}" style="color: red" escape="false"/>
-                            <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_tmc}&lt;/b&gt;" rendered="#{outdtNew2.statusMDM eq 'PENDING_TMC'}" style="color: blue" escape="false"/>
-                            <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_commercial_manager}&lt;/b&gt;" rendered="#{outdtNew2.statusMDM eq 'PENDING_COMMERCIAL_MANAGER'}" style="color: sienna" escape="false"/>
-                            <h:outputLabel value="&lt;b&gt;#{msg.sta_approval}&lt;/b&gt;" rendered="#{outdtNew2.statusMDM eq 'APPROVED'}" style="color: greenyellow" escape="false"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_approbation_massive}" rendered="#{outletConsultarBean.renderMassiveApproval}">
-                            <p:selectBooleanCheckbox value="#{outdtNew2.approbationMassive}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_razon_social}" filterBy="#{outdtNew2.businessName}" filterMatchMode="startsWith">
-                            <h:outputLabel value="#{outdtNew2.businessName}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_nit}" filterBy="#{outdtNew2.nit}" filterMatchMode="startsWith">
-                            <h:outputLabel value="#{outdtNew2.nit}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.sub_seg_subsegmento}" filterBy="#{outdtNew2.subSegmentId.nameSubsegment}" filterMatchMode="startsWith">
-                            <h:outputLabel value="#{outdtNew2.subSegmentId.nameSubsegment}"/>
-                        </p:column>                        
-                        <p:column headerText="#{msg.out_kiernan}" filterBy="#{outdtNew2.kiernanId}" filterMatchMode="startsWith">
-                            <h:outputLabel value="#{outdtNew2.kiernanId}"/>
-                        </p:column>    
-                        <p:column headerText="#{msg.out_punto_venta}" filterBy="#{outdtNew2.kiernanId}" filterMatchMode="startsWith">
-                            <h:outputLabel value="#{outdtNew2.numberPdv}"/>
-                        </p:column>   
-                        <p:column headerText="#{msg.out_direccion}">
-                            <h:outputLabel value="#{outdtNew2.address}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.chain_city}">
-                            <h:outputLabel value="#{outdtNew2.townId.nameTown}"/>
-                        </p:column>                        
-                        <p:column headerText="#{msg.can_canal}">
-                            <h:outputLabel value="#{outdtNew2.subSegmentId.segmentId.subChannelId.channelId.nameChannel}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.sub_subcanal}">
-                            <h:outputLabel value="#{outdtNew2.subSegmentId.segmentId.subChannelId.nameSubChannel}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.seg_segmento}">
-                            <h:outputLabel value="#{outdtNew2.subSegmentId.segmentId.nameSegment}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_potencial}">
-                            <h:outputLabel value="#{outdtNew.potentialId.namePotential}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_distribuidor} #{msg.old}">
-                            <h:outputLabel value="#{outletConsultarBean.showDistributorName(outdtNew2.db3PartyIdOld)}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.out_distribuidor}">
-                            <h:outputLabel value="#{outletConsultarBean.showDistributorName(outdtNew2.db3PartyIdNew)}"/>
-                        </p:column>
-                        <p:column style="width: 8%;text-align: center">
-                            <p:commandLink value="#{msg.btn_edit}" style="color: blue" process="@all" update="@form"
-                                           actionListener="#{outletConsultarBean.seeDetail(outdtNew2)}" disabled="#{outdtNew2.disabledButtonEdit}"/>
-                            <br/><br/>
-                            <h:panelGroup rendered="#{outdt.statusOutlet eq '4'}">
-                                <h:outputLabel id="labelRe" value="Detalle Rechazo" style="color: blue"/>
-                                <p:tooltip for="labelRe" value="#{outdtNew2.rejectMessage}"/>
-                            </h:panelGroup>
-                        </p:column>
-                    </p:dataTable>
+                    </style>
+                    <ui:include src="tablesOutlet/outletDataTable.xhtml"/>
+                    <ui:include src="tablesOutlet/outletDataTableLazyDataModel.xhtml"/>
                     <br/>
                     <h:panelGrid columns="4">                        
                         <p:commandButton value="#{msg.btn_select_all}" styleClass="button" process="@all" update="@form"
