--- a/DiageoMDMWeb/src/main/webapp/admin/segmento/consultarSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/segmento/consultarSegmento.xhtml
@@ -18,9 +18,18 @@
                 </style>
                 <h:form id="formSeg">
                     <p:fieldset legend="#{msg.m_segmento}" style="width: 90%">
+                        <br/>
+                        <h:commandLink rendered="#{segementoConsultarBean.verDetalle}">
+                            <p:graphicImage name="/images/iconos/xls.png" width="5%"/>
+                            <p:dataExporter type="xls" target="dtChannel" fileName="#{msg.seg_segmento}" pageOnly="false" />
+                        </h:commandLink>
+                        <br/>
                         <p:dataTable id="dtChannel" value="#{segementoConsultarBean.listaSegmento}" var="seg" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                      rendered="#{segementoConsultarBean.verDetalle}" paginator="true">
+                            <p:column headerText="#{msg.id}">
+                                <h:outputLabel value="#{seg.segmentId}"/>
+                            </p:column>
                             <p:column headerText="#{msg.seg_nombre}">
                                 <h:outputLabel value="#{seg.nameSegment}"/>
                             </p:column>
@@ -33,11 +42,11 @@
                             <p:column headerText="#{msg.sub_subcanal}">
                                 <h:outputLabel value="#{seg.subChannelId.nameSubChannel}"/>
                             </p:column>
-                            <p:column headerText="#{msg.estado}" style="text-align: center">                                       
+                            <p:column headerText="#{msg.estado}" style="text-align: center" exportable="false">
                                 <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{seg.stateSegment eq '0'}"/>
                                 <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{seg.stateSegment eq '1'}"/>
                             </p:column>
-                            <p:column>
+                            <p:column exportable="false">
                                 <p:commandLink value="#{msg.btn_detalle}" actionListener="#{segementoConsultarBean.detalle(seg)}" 
                                                style="color: blue" process="@this" update="@form"/>
                             </p:column>
