--- a/DiageoMDMWeb/src/main/webapp/admin/subcanal/consultarSubCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subcanal/consultarSubCanal.xhtml
@@ -14,9 +14,17 @@
                 <h:form id="formSubCanal">
                     <p:fieldset legend="#{msg.m_canal_sub}" style="width: 90%">
                         <br/>
+                        <h:commandLink rendered="#{consultarSubChannel.verDetalle}">
+                            <p:graphicImage name="/images/iconos/xls.png" width="5%"/>
+                            <p:dataExporter type="xls" target="dtChannel" fileName="#{msg.sub_subcanal}" pageOnly="false" />
+                        </h:commandLink>
+                        <br/>
                         <p:dataTable id="dtChannel" value="#{consultarSubChannel.listaSubChannel}" var="subcha" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                      rendered="#{consultarSubChannel.verDetalle}" paginator="true">
+                            <p:column headerText="#{msg.id}">
+                                <h:outputLabel value="#{subcha.subChannelId}"/>
+                            </p:column>
                             <p:column headerText="#{msg.sub_can_nombre}">
                                 <h:outputLabel value="#{subcha.nameSubChannel}"/>
                             </p:column>
@@ -26,11 +34,11 @@
                             <p:column headerText="#{msg.can_nombre}">
                                 <h:outputLabel value="#{subcha.channelId.nameChannel}"/>
                             </p:column>
-                            <p:column headerText="#{msg.estado}" style="text-align: center">                                       
+                            <p:column headerText="#{msg.estado}" style="text-align: center" exportable="false">
                                 <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{subcha.stateSubChannel eq '0'}"/>
                                 <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{subcha.stateSubChannel eq '1'}"/>
                             </p:column>
-                            <p:column>
+                            <p:column exportable="false">
                                 <p:commandLink value="#{msg.btn_detalle}" actionListener="#{consultarSubChannel.detalleSubChannel(subcha)}" 
                                                style="color: blue" process="@this" update="@form"/>                               
                             </p:column>
