--- a/DiageoMDMWeb/src/main/webapp/admin/subsegmento/consultarSubSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subsegmento/consultarSubSegmento.xhtml
@@ -19,9 +19,17 @@
                 <h:form id="formSeg">
                     <p:fieldset legend="#{msg.m_segmento_sub}" style="width: 90%">
                         <br/>
+                        <h:commandLink rendered="#{subSegmentoConsultarBean.verDetalle}">
+                            <p:graphicImage name="/images/iconos/xls.png" width="5%"/>
+                            <p:dataExporter type="xls" target="dtChannel" fileName="#{msg.sub_seg_subsegmento}" pageOnly="false" />
+                        </h:commandLink>
+                        <br/>
                         <p:dataTable id="dtChannel" value="#{subSegmentoConsultarBean.listaSubSegmentos}" var="seg" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                      rendered="#{subSegmentoConsultarBean.verDetalle}" paginator="true" style="word-wrap: break-word;">
+                            <p:column headerText="#{msg.id}">
+                                <h:outputLabel value="#{seg.subSegmentId}"/>
+                            </p:column>
                             <p:column headerText="#{msg.sub_seg_nombre}">
                                 <h:outputLabel value="#{seg.nameSubsegment}"/>
                             </p:column>
@@ -37,11 +45,11 @@
                             <p:column headerText="#{msg.sub_subcanal}">
                                 <h:outputLabel value="#{seg.segmentId.subChannelId.nameSubChannel}"/>
                             </p:column>
-                            <p:column headerText="#{msg.estado}" style="text-align: center">                                       
+                            <p:column headerText="#{msg.estado}" style="text-align: center" exportable="false">
                                 <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{seg.stateSubSegment eq '0'}"/>
                                 <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{seg.stateSubSegment eq '1'}"/>
                             </p:column>
-                            <p:column>
+                            <p:column exportable="false">
                                 <p:commandLink value="#{msg.btn_detalle}" actionListener="#{subSegmentoConsultarBean.detalleSub(seg)}" 
                                                style="color: blue" process="@this" update="@form"/>
                             </p:column>
