--- a/DiageoMDMWeb/src/main/webapp/errorPage.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/errorPage.xhtml
@@ -12,6 +12,7 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />                
         <h:outputStylesheet library="css" name="template.css"/>
         <title>#{msg.diageo}</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=11"/>        
     </h:head>
     <h:body>
         <h:form>
